--- a/css/imafru.css
+++ b/css/imafru.css
@@ -1,11 +1,15 @@
+html{
+	background-color: #FFA349;
+}
+
 body{
 	position: absolute;
 	top: 15%;
 	height: 70%;
 	left: 10%;
 	width: 80%;
-	background-color: #F5EDE3;
-	border: solid 8px #104386;
+	background-color: #FFC649;
+	border: solid 8px #0394B6;
 	border-radius: 35px;
 	padding-top: 50px;
 	min-height: 400px;
@@ -14,6 +18,23 @@ body{
 	-o-box-shadow: 0px 0px 40px 17px rgba(0,0,0,0.5);
 	-moz-box-shadow: 0px 0px 40px 17px rgba(0,0,0,0.5);
 	-webkit-box-shadow: 0px 0px 40px 17px rgba(0,0,0,0.5);
+}
+
+input[type=button], input[type=number] {
+	display: block;
+	width: 100%;
+	font-weight: bold;
+}
+
+input[type="number"] {
+	border: 1px solid white;
+	background-color: rgba(255, 198, 73, 0.75);
+}
+
+input[type="button"] {
+	border: 1px solid black;
+	padding: 0px;
+	background-color: rgba(255, 163, 73, 1.0);
 }
 
 .days{
@@ -31,97 +52,140 @@ body{
   -webkit-align-items: center;
   align-content: center;
   -webkit-align-content: center;
-
-  background-color: #E1D4C0;
 }
 
 .day {
 	position: relative;
+	min-width: 4em;
 	width: 7.5%;
 	max-height: 200px;
 	min-height: 200px;
 	height: 200px;
 	margin: auto;
 	padding: 0;
-	background-color: #6699FF;
 	overflow: hidden;
+	border-radius: 1em 1em 0.3em 0.3em;
+
+	box-shadow: 0px 0px 7px 3px rgba(255, 255, 255, 0.3);
+	-o-box-shadow: 0px 0px 7px 3px rgba(255, 255, 255, 0.3);
+	-moz-box-shadow: 0px 0px 7px 3px rgba(255, 255, 255, 0.3);
+	-webkit-box-shadow: 0px 0px 7px 3px rgba(255, 255, 255, 0.3);
 }
 
 .weekday {
+	position: absolute;
+	width: 100%;
+	padding: 0;
+	margin: 0;
+	line-height: 1.7em;
+	font-weight: bold;
 	text-align: center;
-}
-
-.futureday {
-	text-align: center;
+	background-color: rgba(220, 220, 220, 0.2);
 }
 
 .amount {
-	background-color: red;
-	color: #FF6600;
+	background-color: #026E87;
+	color: #FFC749;
+	font-weight: bold;
 	position: absolute;
 	bottom: 0;
 	width: 100%;
 	min-height: 40px;
 	left: 0;
+	line-height: -2.0em;
 	text-align: center;
 }
 
-.week {
-	display: flex;
-	display: -webkit-flex;
-	height: 100px;
-	flex-direction: row;
-	-webkit-flex-direction: row;
-	flex-wrap: nowrap;
-	-webkit-flex-wrap: nowrap;
-
-	justify-content: space-around;
-	align-items: center;
-	-webkit-align-items: center;
-	align-content: center;
-	-webkit-align-content: center;
-	background-color: #E1D4C0;
+.aboveaverage {
+	background-color: #0394B6;
+	border-top: #FF7F00 solid 5px;
+	color: #FF7F00;
+	font-size: 115%;
 }
 
-.goal {
-	width: 10%;
-	height: 50%;
-	margin: auto;
-	overflow: hidden;
-	order: 0;
-}
-
-.weekbar {
-	display: flex;
-	display: -webkit-flex;
-	width: 80%;
-	height: 50%;
-	margin: auto;
-	order: 1;
-}
-
-.projection {
-	width: 10%;
-	height: 50%;
-	margin: auto;
-	overflow: hidden;
-	order: 2;
-}
-
-.dayoff {
-	opacity: 0.5;
-	font-style: italic;
+.belowaverage {
+	background-color: #026E87;
+	border-top: #3EAFCA solid 5px;
+	color: #3EAFCA; 
 }
 
 .present {
-	background-color: #F5EDE3;
-	color: red;
+	box-shadow: 0px 0px 10px 4px rgba(235, 235, 235, 0.75);
+	-o-box-shadow: 0px 0px 10px 4px rgba(235, 235, 235, 0.75);
+	-moz-box-shadow: 0px 0px 10px 4px rgba(235, 235, 235, 0.75);
+	-webkit-box-shadow: 0px 0px 10px 4px rgba(235, 235, 235, 0.75);
 }
 
 .today {
 	text-align: center;
 	font-weight: 600;
 	font-style: bold;
+}
+
+.future {
+	border: 0px solid black;
+	background-color: rgba(62, 175, 202, 0.3);
+	color: #15A4C6;
+}
+
+.easy {
+	background-color: rgba(62, 175, 202, 0.3);
+	color: #FFC649;
+}
+
+.hard {
+	background-color: rgba(255, 137, 20, 0.3);
+	color: #FF2F14;
+}
+
+
+.week {
+	display: flex;
+	display: -webkit-flex;
+	max-height: 100px;
+	min-height: 100px;
+	height: 100px;
+	flex-direction: row;
+	-webkit-flex-direction: row;
+	flex-wrap: nowrap;
+	-webkit-flex-wrap: nowrap;
+
+	align-items: flex-end;
+	-webkit-align-items: flex-end;
+	align-content: center;
+	-webkit-align-content: center;
+	justify-content: space-around;
+	-webkit-justify-content: space-around;
+}
+
+.goal {
+	position: relative;
+	min-width: 4em;
+	width: 10%;
+	margin: auto;
+	overflow: hidden;
+}
+
+.weekbar {
+	display: flex;
+	display: -webkit-flex;
+	min-width: 6em;
+	width: 80%;
+	height: 50%;
+	margin: auto;
+}
+
+.projection {
+	min-width: 2em;
+	width: 10%;
+	height: 50%;
+	margin: auto;
+	overflow: hidden;
+}
+
+.dayoff {
+	opacity: 0.5;
+	font-style: italic;
 }
 
 .goaldoneleft {
@@ -138,16 +202,6 @@ body{
 
 .goalleftright{
 	background-color: #104386; 
-}
-
-.aboveaverage {
-	color: #FF6600;
-	background-color: #104386;
-}
-
-.belowaverage {
-	color: #104386;
-	background-color: #6699FF;
 }
 
 .dontdisplay {
@@ -193,11 +247,18 @@ body{
 	margin: auto;
 }
 
-.toggleedit {
+.earning:focus {
+	background-color: #3EAFCA;
+	color: 015569;
+	font-weight: bold;
+}
+
+.editlock {
+	z-index: 1;
 	position: absolute;
 	padding: 0;
-	top: 0px;
-	left: 0px;
-	width: 10px;
-	height: 10px;
+	top: 0.3em;
+	right: 0.3em;
+	width: 1em;
+	opacity: 0.6;
 }
