--- a/css/imafru.css
+++ b/css/imafru.css
@@ -22,18 +22,19 @@ body{
 
 input[type=button], input[type=number] {
 	display: block;
+	border: 0px solid white;
 	width: 100%;
+	height: 100%;
+	padding: 0px;
+	margin: 0px;
 	font-weight: bold;
 }
 
 input[type="number"] {
-	border: 1px solid white;
 	background-color: rgba(255, 198, 73, 0.75);
 }
 
 input[type="button"] {
-	border: 1px solid black;
-	padding: 0px;
 	background-color: rgba(255, 163, 73, 1.0);
 }
 
@@ -70,6 +71,14 @@ input[type="button"] {
 	-o-box-shadow: 0px 0px 7px 3px rgba(255, 255, 255, 0.3);
 	-moz-box-shadow: 0px 0px 7px 3px rgba(255, 255, 255, 0.3);
 	-webkit-box-shadow: 0px 0px 7px 3px rgba(255, 255, 255, 0.3);
+}
+
+.weekday, .amount {
+	-webkit-transition: height 2s ease, background-color 2s ease, color 2s ease; 
+	-moz-transition: height 2s ease, background-color 2s ease, color 2s ease; 
+	-ms-transition: height 2s ease, background-color 2s ease, color 2s ease; 
+	-o-transition: height 2s ease, background-color 2s ease, color 2s ease; 
+	transition: height 2s ease, background-color 2s ease, color 2s ease; 
 }
 
 .weekday {
@@ -123,21 +132,21 @@ input[type="button"] {
 }
 
 .future {
-	border: 0px solid black;
 	background-color: rgba(62, 175, 202, 0.3);
 	color: #15A4C6;
 }
 
 .easy {
+	border-top: #FFF849 solid 5px;
 	background-color: rgba(62, 175, 202, 0.3);
-	color: #FFC649;
+	color: #FFF849;
 }
 
 .hard {
+	border-top: #FF2F14 solid 5px;
 	background-color: rgba(255, 137, 20, 0.3);
 	color: #FF2F14;
 }
-
 
 .week {
 	display: flex;
@@ -156,6 +165,14 @@ input[type="button"] {
 	-webkit-align-content: center;
 	justify-content: space-around;
 	-webkit-justify-content: space-around;
+}
+
+.barelement {
+	-webkit-transition: height 2s ease, background-color 2s ease, color 2s ease; 
+	-moz-transition: height 2s ease, background-color 2s ease, color 2s ease; 
+	-ms-transition: height 2s ease, background-color 2s ease, color 2s ease; 
+	-o-transition: height 2s ease, background-color 2s ease, color 2s ease; 
+	transition: height 2s ease, background-color 2s ease, color 2s ease; 
 }
 
 .goal {
