--- a/css/imafru.css
+++ b/css/imafru.css
@@ -20,48 +20,13 @@ body{
 	-webkit-box-shadow: 0px 0px 40px 17px rgba(0,0,0,0.5);
 }
 
-input[type=button], input[type=number] {
-	display: block;
-	border: 0px solid white;
-	width: 100%;
-	height: 100%;
-	padding: 0px;
-	margin: 0px;
-	font-weight: bold;
-}
-
-input[type="number"] {
-	background-color: rgba(255, 198, 73, 0.75);
-}
-
-input[type="button"] {
-	background-color: rgba(255, 163, 73, 1.0);
-}
-
-.days{
-  display: flex;
-  display: -webkit-flex;
-  height: 200px;
-
-  flex-direction: row;
-  -webkit-flex-direction: row;
-  flex-wrap: nowrap;
-  -webkit-flex-wrap: nowrap;
-
-  justify-content: space-around;
-  align-items: center;
-  -webkit-align-items: center;
-  align-content: center;
-  -webkit-align-content: center;
-}
-
-.day {
+.dayContainer {
 	position: relative;
 	min-width: 4em;
 	width: 7.5%;
-	max-height: 200px;
-	min-height: 200px;
-	height: 200px;
+	max-height: 220px;
+	min-height: 220px;
+	height: 220px;
 	margin: auto;
 	padding: 0;
 	overflow: hidden;
@@ -73,204 +38,24 @@ input[type="button"] {
 	-webkit-box-shadow: 0px 0px 7px 3px rgba(255, 255, 255, 0.3);
 }
 
-.weekday, .amount {
-	-webkit-transition: height 2s ease, background-color 2s ease, color 2s ease; 
-	-moz-transition: height 2s ease, background-color 2s ease, color 2s ease; 
-	-ms-transition: height 2s ease, background-color 2s ease, color 2s ease; 
-	-o-transition: height 2s ease, background-color 2s ease, color 2s ease; 
-	transition: height 2s ease, background-color 2s ease, color 2s ease; 
-}
-
-.weekday {
+.dayName {
 	position: absolute;
 	width: 100%;
+	height: 20px;
 	padding: 0;
 	margin: 0;
-	line-height: 1.7em;
+	line-height: 1.4em;
 	font-weight: bold;
 	text-align: center;
 	background-color: rgba(220, 220, 220, 0.2);
 }
 
-.amount {
-	background-color: #026E87;
-	color: #FFC749;
-	font-weight: bold;
-	position: absolute;
-	bottom: 0;
-	width: 100%;
-	min-height: 40px;
-	left: 0;
-	line-height: -2.0em;
-	text-align: center;
-}
-
-.aboveaverage {
-	background-color: #0394B6;
-	border-top: #FF7F00 solid 5px;
-	color: #FF7F00;
-	font-size: 115%;
-}
-
-.belowaverage {
-	background-color: #026E87;
-	border-top: #3EAFCA solid 5px;
-	color: #3EAFCA; 
-}
-
-.present {
-	box-shadow: 0px 0px 10px 4px rgba(235, 235, 235, 0.75);
-	-o-box-shadow: 0px 0px 10px 4px rgba(235, 235, 235, 0.75);
-	-moz-box-shadow: 0px 0px 10px 4px rgba(235, 235, 235, 0.75);
-	-webkit-box-shadow: 0px 0px 10px 4px rgba(235, 235, 235, 0.75);
-}
-
-.today {
-	text-align: center;
-	font-weight: 600;
-	font-style: bold;
-}
-
-.future {
-	background-color: rgba(62, 175, 202, 0.3);
-	color: #15A4C6;
-}
-
-.easy {
-	border-top: #FFF849 solid 5px;
-	background-color: rgba(62, 175, 202, 0.3);
-	color: #FFF849;
-}
-
-.hard {
-	border-top: #FF2F14 solid 5px;
-	background-color: rgba(255, 137, 20, 0.3);
-	color: #FF2F14;
-}
-
-.week {
-	display: flex;
-	display: -webkit-flex;
-	max-height: 100px;
-	min-height: 100px;
-	height: 100px;
-	flex-direction: row;
-	-webkit-flex-direction: row;
-	flex-wrap: nowrap;
-	-webkit-flex-wrap: nowrap;
-
-	align-items: flex-end;
-	-webkit-align-items: flex-end;
-	align-content: center;
-	-webkit-align-content: center;
-	justify-content: space-around;
-	-webkit-justify-content: space-around;
-}
-
-.barelement {
-	-webkit-transition: height 2s ease, background-color 2s ease, color 2s ease; 
-	-moz-transition: height 2s ease, background-color 2s ease, color 2s ease; 
-	-ms-transition: height 2s ease, background-color 2s ease, color 2s ease; 
-	-o-transition: height 2s ease, background-color 2s ease, color 2s ease; 
-	transition: height 2s ease, background-color 2s ease, color 2s ease; 
-}
-
-.goal {
-	position: relative;
-	min-width: 4em;
-	width: 10%;
-	margin: auto;
-	overflow: hidden;
-}
-
-.weekbar {
-	display: flex;
-	display: -webkit-flex;
-	min-width: 6em;
-	width: 80%;
-	height: 50%;
-	margin: auto;
-}
-
-.projection {
-	min-width: 2em;
-	width: 10%;
-	height: 50%;
-	margin: auto;
-	overflow: hidden;
-}
-
-.dayoff {
+.offday {
 	opacity: 0.5;
 	font-style: italic;
 }
 
-.goaldoneleft {
-	background-color: #6699FF;
-}
-
-.goaldoneright {
-	background-color: #FF6600;
-}
-
-.goalleftleft {
-	background-color: #6699FF;
-}
-
-.goalleftright{
-	background-color: #104386; 
-}
-
-.dontdisplay {
-	display: none;
-	visibility: hidden;
-}
-
-.update {
-	position: absolute;
-	display: flex;
-	display: -webkit-flex;
-
-	flex-direction: row;
-	-webkit-flex-direction: row;
-	flex-wrap: nowrap;
-	-webkit-flex-wrap: nowrap;
-
-	justify-content: space-between;
-	align-items: center;
-	-webkit-align-items: center;
-	align-content: center;
-	-webkit-align-content: center;
-
-	width: 100%;
-	bottom: 0;
-}
-
-.add {
-	width: 35%;
-	padding: 0;
-	margin: auto;
-}
-
-.set {
-	width: 35%;
-	padding: 0;
-	margin: auto;
-}
-
-.earning {
-	width: 30%;
-	padding: 0;
-	margin: auto;
-}
-
-.earning:focus {
-	background-color: #3EAFCA;
-	color: 015569;
-	font-weight: bold;
-}
-
-.editlock {
+.lock {
 	z-index: 1;
 	position: absolute;
 	padding: 0;
@@ -278,5 +63,20 @@ input[type="button"] {
 	right: 0.3em;
 	height: 1em;
 	width: 1em;
-	opacity: 0.6;
+	opacity: 1.0;
+}
+
+.good {
+	color: rgba(30, 220, 50, 1.0);
+	font-weight: bold;
+}
+
+.bad {
+	color: rgba(210, 20, 20, 1.0);
+	font-weight: bold;
+}
+
+.neutral {
+	color: rgba(50, 50, 250, 1.0);
+	font-weight: bold;
 }
